tests/baselines/reference/strictInstanceOfTypeParametersFromPrivateNameInInExpression.errors.txt
strictInstanceOfTypeParametersFromPrivateNameInInExpression.ts(9,13): error TS2322: Type 'unknown' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown'.
strictInstanceOfTypeParametersFromPrivateNameInInExpression.ts(19,13): error TS2322: Type 'string' is not assignable to type 'T'.
  'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.


==== strictInstanceOfTypeParametersFromPrivateNameInInExpression.ts (2 errors) ====
    class UnconstrainedWithPrivate<T> {
        #brand;
        value: T;
        constructor(value: T) {
            this.value = value;
        }
        copyValue(other: object) {
            if (#brand in other) {
                this.value = other.value;
                ~~~~~~~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'unknown'.
            }
        }
    }
    
    class ConstrainedWithPrivate<T extends string> {
        #brand;
        value: T;
        copyValue(other: object) {
            if (#brand in other) {
                this.value = other.value;
                ~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'T'.
!!! error TS2322:   'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'string'.
            }
        }
    }
    